<resources>
    <string name="app_name">Bankmeister</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="add_account">Add account</string>
    <string name="settings">Settings</string>
    <string name="never">Never</string>
    <string name="minutes">%d min</string>
    <string name="hours">%d h</string>
    <string name="online_banking_credentials_section_title">Online banking login data</string>
    <string name="online_banking_credentials_login_name">Login name</string>
    <string name="online_banking_credentials_password">Password</string>
    <string name="account">Account</string>
    <string name="accounts">Accounts</string>
    <string name="bank_credentials">Bank credentials</string>
    <string name="name">Name</string>
    <string name="bank_code">Bank code</string>
    <string name="bic">BIC</string>
    <string name="iban">IBAN</string>
    <string name="amount">Amount</string>
    <string name="reference">Reference</string>
    <string name="booking_text">Booking text</string>
    <string name="booking_date">Booking date</string>
    <string name="value_date">Value date</string>
    <string name="day_opening_balance">Day opening balance</string>
    <string name="day_closing_balance">Day closing balance</string>
    <string name="customer_name">Customer name</string>
    <string name="fints_server_address">FinTS server</string>
    <string name="checking_account">Checking account</string>
    <string name="savings_account">Savings account</string>
    <string name="fixed_term_deposit_account">Fixed term deposit account</string>
    <string name="securities_account">Securities account</string>
    <string name="loan_account">Loan account</string>
    <string name="credit_card_account">Credit card account</string>
    <string name="fund_deposit">Fund deposit</string>
    <string name="building_loan_contract">Building loan ontract</string>
    <string name="insurance_contract">Insurance Contract</string>
    <string name="other">Other</string>
    <string name="activity_login_authenticate_with_password_prompt">Please enter your password to unlock app</string>
    <string name="activity_login_authenticate_with_password_hint">Enter your password</string>
    <string name="activity_login_authenticate_with_biometrics_prompt">Please authenticate with fingerprint or face recognition to unlock app</string>
    <string name="activity_login_login_button_title">Login</string>
    <string name="activity_login_incorrect_password_entered">Incorrect password entered</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_version_label">Version\u0020</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_menu_all_bank_accounts_title">All accounts</string>
    <string name="floating_action_menu_add_account">Account</string>
    <string name="floating_action_menu_transfer_money">Transfer money</string>
    <string name="floating_action_menu_money_transfer_from_scanning_qr_code">Money transfer from scanning QR-Code</string>
    <string name="floating_action_menu_transfer_money_from_pdf">Transfer money from PDF</string>
    <string name="rationale_camera_permission_to_scan_qr_code">To scan QR-Codes permission to access camera is required.</string>
    <string name="dialog_add_account_enter_bank">Bank (search by name, bank code or city):</string>
    <string name="dialog_add_account_add">Add</string>
    <string name="dialog_add_account_bank_does_not_support_fints_3_error_message">%s does not support FinTS 3.0 and can therefore unfortunately not be used with this app.</string>
    <string name="dialog_add_account_message_could_not_add_account">Could not add account.\n\nError message from your bank:\n\n%s</string>
    <string name="menu_home">Home</string>
    <string name="menu_main_update_transactions">Update transactions</string>
    <string name="fragment_home_count_transactions">%d transactions</string>
    <string name="fragment_home_could_not_retrieve_account_transactions">Could not retrieve account transactions for \'%1$s\'.\n\nError message from your bank:\n\n%2$s</string>
    <string name="fragment_home_fetch_transactions">Fetch transactions</string>
    <string name="fragment_home_transactions_retrieval_state_account_type_not_supported">Account type not supported by app</string>
    <string name="fragment_home_transactions_retrieval_state_account_does_not_support_retrieving_transactions">Account does not support retrieving transactions</string>
    <string name="fragment_home_transactions_retrieval_state_never_retrieved_transactions">No transactions fetched yet</string>
    <string name="fragment_home_transactions_retrieval_state_no_transactions_in_retrieved_period">There haven\'t been any transactions in retrieved period from %1$s - %2$s</string>
    <string name="fragment_home_transfer_money_to">Transfer money to %s</string>
    <string name="fragment_home_transfer_money_with_same_data">New transfer with same data</string>
    <string name="fragment_home_fetch_all_account_transactions">Fetch all transactions (requires TAN)</string>
    <string name="popup_fetch_all_transactions_info">Until now only the transactions since the %1$s were retrieved.
        \n\nFor this account the transactions of the last %2$d days, i.e. up to %3$s, can be retrieved.
        \n\nIf you want to do this, simply click on the button to the left.
        \n\nIf you no longer wish to see this button for this account, click on the \'x\' on the right. The button will still be displayed at the end of the list of transactions, in case you want to retrieve the earlier transactions later.
    </string>
    <string name="dialog_account_transaction_details_title">Transaction details</string>
    <string name="dialog_account_transaction_details_sender">Sender</string>
    <string name="dialog_account_transaction_details_recipient">Recipient</string>
    <string name="dialog_transfer_money_account">Account:</string>
    <string name="dialog_transfer_money_recipient_name">Name:</string>
    <string name="dialog_transfer_money_recipient_iban">IBAN:</string>
    <string name="dialog_transfer_money_bic_detected_from_iban">BIC: %1$s, %2$s</string>
    <string name="dialog_transfer_money_could_not_determine_bic_from_iban">No BIC found for bank code %1$s</string>
    <string name="dialog_transfer_money_amount">Amount:</string>
    <string name="dialog_transfer_money_reference">Reference:</string>
    <string name="dialog_transfer_money_real_time_transfer">Real-time transfer (may with costs)</string>
    <string name="dialog_transfer_money_real_time_transfer_info">Bank transfers are usually credited within one banking day. However, this only applies during bank business hours, and therefore not at weekends and on public holidays. In addition, business hours vary from bank to bank. Mostly they are from 10 - 18 o\'clock, sometimes also until 22 o\'clock, but sometimes (e. g. Fridays) only until 14 o\'clock.
        \n\nReal-time transfers on the other hand are transferred within a maximum of 10 seconds, regardless of the day and time of day.
        \n\nHowever, real-time transfers are often subject to a fee.
        \n\nUnfortunately, Bankmeister cannot know whether a bank charges for real-time transfers. Please refer to the list of prices and services of your bank.</string>
    <string name="dialog_transfer_money_transfer">Transfer</string>
    <string name="dialog_transfer_money_message_transfer_successful">Successfully transferred %1$s %2$s to %3$s.</string>
    <string name="dialog_transfer_money_message_transfer_failed">Could not transfer %1$s %2$s to %3$s.\n\nError message from your bank:\n\n%4$s</string>
    <string name="money_transfer_from_scanning_qr_code_error">Could not extract transfer data from QR-Code: %1$s\n\nExtracted QR-Code was:\n%2$s</string>
    <string name="transfer_money_from_pdf_error_message_not_a_searchable_pdf">File "%1$s" is not a searchable PDF. Could therefore not extract text from it.</string>
    <string name="transfer_money_from_pdf_error_message_could_not_extract_text">Could not extract text from file "%1$s":\n\n%2$s</string>
    <string name="transfer_money_from_pdf_error_message_could_not_extract_invoice_data">Could not extract cash transfer data from file "%1$s":\n\n%2$s</string>
    <string name="view_tan_image_size_controls_size">Size:</string>
    <string name="view_flicker_code_frequency">Frequency:</string>
    <string name="dialog_enter_tan_select_tan_method">TAN method</string>
    <string name="dialog_enter_tan_select_tan_medium">TAN medium</string>
    <string name="dialog_enter_tan_tan_description_label">Hint from your bank:</string>
    <string name="dialog_enter_tan_enter_tan">Enter TAN:</string>
    <string name="dialog_enter_tan_error_could_not_decode_tan_image">Could not decode flicker code or QR code / PhotoTan. Most likely an internal error:\n%s.</string>
    <string name="dialog_enter_tan_tan_medium_successfully_changed">TAN medium successfully changed to \'%s\'.</string>
    <string formatted="false" name="dialog_enter_tan_error_changing_tan_medium">Could not change TAN medium to \'%s\'.\n\nError message from your bank:\n\n%s</string>
    <string name="dialog_enter_atc_explanation"><![CDATA[
        <p>Your bank asks you to synchronize your TAN generator.</p>
        <p>Please insert the card \'%s\' into your TAN generator.</p>
        <p>Then press the \'TAN\' button for a few seconds till \'aktiviert\' gets displayed.</p>
        <p>Then either press the \'TAN\' button again or enter the start code \'103\', press the \'OK\' button twice and then the \'ᐯ\' button (depends on your model).</p>
        Now the values for \'TAN\' and \'ATC\' should be displayed. Enter these two values below:
    ]]></string>
    <string name="dialog_enter_atc_tan_label">TAN:</string>
    <string name="dialog_enter_atc_atc_label">ATC:</string>
    <string name="dialog_enter_atc_error_entered_atc_is_not_a_number">ATC has to be a number.\n\nBut entered ATC value \'%s\' cannot be converted to a number.</string>
    <string name="dialog_settings_update_accounts_automatically_after">Update accounts after (to be implemented)</string>
    <string name="dialog_settings_secure_app_data">Secure app data</string>
    <string name="dialog_bank_settings_bank_name">Name</string>
    <string name="dialog_bank_settings_tan_method_section_title">TAN method</string>
    <string name="dialog_bank_settings_bank_data_section_title">Bank data</string>
    <string name="dialog_bank_settings_delete_account">Delete account</string>
    <string name="dialog_bank_account_settings_account_name">Name</string>
    <string name="dialog_bank_account_settings_hide_account">Hide account</string>
    <string name="dialog_bank_account_settings_include_in_automatic_accounts_updates">Include in automatic updates</string>
    <string name="dialog_bank_account_settings_account_data_section_title">Account data</string>
    <string name="dialog_bank_account_setting_account_holder_name">Account holder name</string>
    <string name="dialog_bank_account_setting_bank_account_identifier">Account identifier</string>
    <string name="dialog_bank_account_setting_sub_account_number">Sub account number</string>
    <string name="dialog_bank_account_setting_bank_account_type">Type</string>
    <string name="dialog_bank_account_settings_account_features_section_title">Supports</string>
</resources>