<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <net.dankito.banking.ui.android.views.FormSectionTitle
                    android:id="@+id/sender_or_recipient_section_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_account_transaction_details_sender"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlOtherPartyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/name"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlOtherPartyAccountId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/iban"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlOtherPartyBankCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/bic"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_section_extra_margin_top"
                >

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/amount"
                    />


                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlReference"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/reference"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_section_title_margin_top"
                >

<!--                <net.dankito.banking.ui.android.views.FormSectionTitle-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/dialog_bank_account_settings_account_data_section_title"-->
<!--                    />-->

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlBookingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/booking_text"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlBookingDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/booking_date"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlValueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/value_date"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlOpeningBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/day_opening_balance"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlClosingBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/day_closing_balance"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>