<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <!-- dummy layout to fetch focus on start so that dialog doesn't start with keyboard displayed -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            >


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <net.dankito.banking.ui.android.views.FormSectionTitle
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/form_section_title_margin_bottom_for_subsequent_edit_text"
                    android:text="@string/settings"
                    />

                <net.dankito.banking.ui.android.views.FormEditText
                    android:id="@+id/edtxtBankAccountName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dialog_bank_account_settings_account_name"
                    android:inputType="text"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swtchHideAccount"
                    style="@style/FormSwitchStyle"
                    android:checked="false"
                    android:text="@string/dialog_bank_account_settings_hide_account"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swtchIncludeInAutomaticAccountsUpdate"
                    style="@style/FormSwitchStyle"
                    android:checked="false"
                    android:text="@string/dialog_bank_account_settings_include_in_automatic_accounts_updates"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_section_extra_margin_top"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_section_extra_margin_top"
                    >

                    <net.dankito.banking.ui.android.views.FormSectionTitle
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/btnShareAccountData"
                        android:layout_toStartOf="@+id/btnShareAccountData"
                        android:text="@string/dialog_bank_account_settings_account_data_section_title"
                        />

                    <ImageButton
                        android:id="@+id/btnShareAccountData"
                        android:layout_width="@dimen/dialog_bank_accounts_settings_share_account_data_button_size"
                        android:layout_height="@dimen/dialog_bank_accounts_settings_share_account_data_button_size"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:background="@null"
                        app:srcCompat="@drawable/ic_baseline_share_24"
                        android:scaleType="fitCenter"
                        />

                </RelativeLayout>

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlAccountHolderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/dialog_bank_account_setting_account_holder_name"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlAccountIdentifier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/dialog_bank_account_setting_bank_account_identifier"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlSubAccountNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/dialog_bank_account_setting_sub_account_number"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlIban"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/iban"
                    />

                <net.dankito.banking.ui.android.views.FormLabelledValue
                    android:id="@+id/lvlAccountType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:label="@string/dialog_bank_account_setting_bank_account_type"
                    />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_section_extra_margin_top"
                >

                <net.dankito.banking.ui.android.views.FormSectionTitle
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_bank_account_settings_account_features_section_title"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyAccountFeatures"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dialog_bank_accounts_settings_list_account_features_height"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>